update product-list ,details and edit

--- a/src/app/product/details-product/details-product.component.html
+++ b/src/app/product/details-product/details-product.component.html
@@ -12,6 +12,7 @@
                 <div class="lds-dual-ring">
 
                     <app-loader></app-loader>
+                    
                 </div>
             </div>
 
@@ -31,7 +32,7 @@
                     <div class="prd-author">
 
                         <i class="fa-regular fa-circle-user"></i>
-
+                        {{product?.emailOwner}}
                       <span></span>  
                     </div>
                     <div class="skills-category">
