Adding home,header and footer test

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -62,8 +62,7 @@
     <div class="welcome">
       <div class="btn-group" role="group" aria-label="Basic outlined example" *ngIf="!isLoggedIn">
 
-        <a routerLink="/auth/login" class="btn btn-outline-primary"><i class="fa-solid fa-right-to-bracket fa-fade"></i>
-          Login</a>
+        <a routerLink="/auth/login" class="btn btn-outline-primary"><i class="fa-solid fa-right-to-bracket fa-fade"></i>Login</a>
         <a routerLink="/auth/register" class="btn btn-outline-primary">Register</a>
 
       </div>
